src/objects/Patient_Implant__c.object
<CustomObject>
    <description>Tracks the implants tied to a patient (Prostho Exam)</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Patient Implants</relationshipLabel>
        <relationshipName>Patient_Implants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GUDID__c</fullName>
        <description>Global Unique Device Identification</description>
        <label>GUDID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implant_Free__c</fullName>
        <description>Stores the part number in a text field rather than a lookup field.  This prevents us from needing a db of the parts already upload and built,  as the team has yet to provide anything to us.</description>
        <label>Implant Free</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implant_Status__c</fullName>
        <description>A status of a particular implant in a patient.</description>
        <label>Implant Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Installed</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Broken</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implant_Type__c</fullName>
        <label>Implant Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Implant</fullName>
                    <default>true</default>
                    <label>Implant</label>
                </value>
                <value>
                    <fullName>Bone Grafting</fullName>
                </value>
                <value>
                    <fullName>BMP</fullName>
                </value>
                <value>
                    <fullName>Abutments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Part Number for the Implant installed</description>
        <label>Implant</label>
        <referenceTo>Implant_Parts__c</referenceTo>
        <relationshipLabel>Patient Implants</relationshipLabel>
        <relationshipName>Patient_Implants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implant_location__c</fullName>
        <label>Implant Location</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Implant_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Upper Left</fullName>
                </value>
                <value>
                    <fullName>Upper Right</fullName>
                </value>
                <value>
                    <fullName>Lower Left</fullName>
                </value>
                <value>
                    <fullName>Lower Right</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lot_Number__c</fullName>
        <description>The lot this implant was tied to.</description>
        <label>Lot Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Practice_Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Private Practice Patient</label>
        <referenceTo>Private_Practice_Patient__c</referenceTo>
        <relationshipLabel>Patient Implants</relationshipLabel>
        <relationshipName>Patient_Implants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prosth_Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Prosth Exam this implant was used in</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Patient Implants</relationshipLabel>
        <relationshipName>Patient_Implants</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Patient Implant</label>
    <nameField>
        <displayFormat>Imp-{0000}</displayFormat>
        <label>Patient Implant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Implants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>